--- a/VFW/Project 4/Bennett_Houston_Project4/css/styles.css
+++ b/VFW/Project 4/Bennett_Houston_Project4/css/styles.css
@@ -1,11 +1,24 @@
+html{
+
+    background: url(/images/bg.jpg) no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+
+}
+
 body{
     font-family: Arial, Helvetica,sans-serif;
     width: 570px;
     margin: auto;
     padding: 10px;
     text-transform: uppercase;
-    background: #808080;
-
+    background: url(/images/bg.jpg) no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
 }
 
 a{
@@ -30,13 +43,9 @@ a{
     width: 75px;
 
 }
-/**
-#content{
-    width: 570px;
-    height: 690px;
 
-}
-*/
+
+
 h1{
     text-align: center;
     border: 10px solid black;
