--- a/VFW/Project 4/Bennett_Houston_Project4/css/styles.css
+++ b/VFW/Project 4/Bennett_Houston_Project4/css/styles.css
@@ -1,6 +1,5 @@
 html{
 
-    background: url(/images/bg.jpg) no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -14,7 +13,7 @@ body{
     margin: auto;
     padding: 10px;
     text-transform: uppercase;
-    background: url(/images/bg.jpg) no-repeat center center fixed;
+    background: url(images/bg.jpg) no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
